--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,7 +59,8 @@ jobs:
       - name: Setup Npm
         run: |
           npm set "//registry.npmjs.org/:_authToken" ${{ secrets.NPM_TOKEN }}
-          npm install
+          yarn config set agora-electron-sdk-pre-built 0
+          yarn
         working-directory: repo
 
       - name: Dry Run Release
