--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -51,6 +51,13 @@ jobs:
           mv tmp package.json
         working-directory: repo
 
+
+      - name: Remove prepack script
+        run: |
+          brew install jq
+          jq 'del(.scripts.prepack)' package.json > tmp
+          mv tmp package.json
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
